feat(identity): expand permission enums